--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jooq.sql-dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://localhost:5431/postgres
